--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github_username:  chaneeh
 
 # Build settings
 #theme: minima
-theme: jekyll-theme-clean-blog
+remote_theme: jekyll-theme-clean-blog
 plugins:
   - jekyll-feed
 
