--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Just the Docs
+title: JIG TECH BLOG
 description: A Jekyll theme for documentation
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://chaneeh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
@@ -66,7 +66,7 @@ heading_anchors: true
 
 # Aux links for the upper right navigation
 aux_links:
-  "Just the Docs on GitHub":
+  "chaneeh on GitHub":
     - "//github.com/chaneeh/chaneeh.github.io.git"
 
 # Makes Aux links open in a new tab. Default is false
