--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,10 @@
 # main links
 main:
-  - title: "블로그 방문하기"
+  - title: "home"
     url: https://chaneeh.github.io/
+  - title: "Categories"
+    url: /categories/
+  - title: "Tags"
+    url: /tags/
   - title: "About"
     url: /about/
