--- a/_config.yml
+++ b/_config.yml
@@ -104,9 +104,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "멋있게 성장중인 개발자"
+  name             : "후추빵"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I like **Data engineering and MLOPS**."
+  bio              : "I like **Data engineering** and **MLOPS**."
   location         : "South Korea"
   email            :
   links:
